--- a/Projet_Jedha_PredictTurnoverBankCustomers.ipynb
+++ b/Projet_Jedha_PredictTurnoverBankCustomers.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -349,14 +349,14 @@
        "10                71725.73       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Import \"Churn_Modelling.csv\" dataset sur Pandas\n",
-    "dataset = pd.read_csv(\"/home/jovyan/Jedha_Python/PROJET/Churn_Modelling.csv\",index_col='RowNumber')\n",
+    "dataset = pd.read_csv(\"Churn_Modelling.csv\",index_col='RowNumber')\n",
     "\n",
     "print(\"Database has {} observations (Bank customers) and {} columns (attributes).\".format(dataset.shape[0],dataset.shape[1]))\n",
     "print('-'*75)\n",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3659,7 +3659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion : "
+    "## Comparaison entre les trois modèles de classification utilisés : "
    ]
   },
   {
@@ -3743,11 +3743,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  - Dans ce projet, nous avons vu les étapes de construction d'un modèle qui prédit la probabilité qu'un client va quitter de la banque. \n",
-    "\n",
-    "  - Au cours de l'analyse exploratoire des données, nous avons découvert que les clients féminins sont les plus susceptibles de se déstabiliser, les clients situés en Allemagne sont les plus désabonnés et les clients n'utilisant qu'un seul produit sont les plus désabonnés. \n",
-    "\n",
     "-  **Après avoir construit plusieurs modèles, nous nous sommes retrouvés avec le Random Forest qui a mieux performé. Il a atteint environ 87% d'accuary.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Appliquer la prédiction sur des exemples : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction Profil Homme : 0\n",
+      "Prediction Profil Femme : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Testons maintenant notre modèle RandomForest : \n",
+    "#[ 'CreditScore','Age', 'Balance','Tenure', 'NumOfProducts', 'HasCrCard', 'IsActiveMember', 'EstimatedSalary', 'Geography_Germany', 'Geography_Spain', 'Gender_Male' ]\n",
+    "\n",
+    "List_test = [[860, 59, 20000, 10, 2, 1, 1, 6000, 0, 0, 1], [150, 25, 6000, 0, 1, 1, 0, 2500, 0, 1, 0] ]\n",
+    "#Exemple 1 : Profil d'un Homme agé de 59 ans qui  a un salaire 6000 euros, et qui habite en France\n",
+    "#Exemple 2 : Profil d'une Femme agé de 25 ans qui a un salaire 2500 euros, et qui habite en Espagne\n",
+    "Jeu_test = pd.DataFrame(List_test, columns = [ 'CreditScore','Age', 'Balance','Tenure', 'NumOfProducts', 'HasCrCard', 'IsActiveMember', 'EstimatedSalary', 'Geography_Germany', 'Geography_Spain', 'Gender_Male' ])\n",
+    "Jeu_test.shape\n",
+    "\n",
+    "# Prédiction sur le jeu de test\n",
+    "pred = classifier3_RF.predict(List_test)\n",
+    "print(\"Prediction Profil Homme :\", pred[0])\n",
+    "print(\"Prediction Profil Femme :\", pred[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion : \n",
+    "\n",
+    "  - Nous avons vu tous les étapes d'un projet DataScience depuis l'exploration des données jusqu'à de construction d'un modèle prédictif, puis l'appliquer sur des cas d'exemples.\n",
+    "  \n",
+    "  - Dans cette étude, nous avons essayé de prédir la probabilité qu'un client quitte de la banque ou non, en utilisant trois modèles de classification.\n",
+    "\n",
+    "  - Au cours de l'analyse exploratoire des données, nous avons découvert que les clients féminins, les clients situés en Allemagne, et les clients n'utilisant qu'un seul produit sont les plus susceptibles de désister. "
    ]
   },
   {
